# pico-rabbitmq

./: .coveragerc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
docs/: architecture.md  faq.md  getting-started.md  index.md  llms.txt  requirements.txt  troubleshooting.md
docs/reference/: api.md  index.md
src/pico_rabbitmq/: __init__.py  config.py  decorators.py  registrar.py
tests/: conftest.py  test_rabbitmq.py
